--- a/learn-certs-pr/courses/pl-400t00.yml
+++ b/learn-certs-pr/courses/pl-400t00.yml
@@ -37,43 +37,94 @@ prerequisitesSection: |-
 outlineSection: |-
   ### Modul 1&#58; Erstellen Sie eine modellgesteuerte Anwendung in Power Apps
   Dieses Modul führt Sie in die Erstellung einer modellgetriebenen App in Power Apps ein, die den allgemeinen Daten-Service verwendet.
+  #### Lektionen
+  - Einführung in modellgetriebene Apps und Common Data Service
+  - MIT modellgetriebenen Apps in Power Apps beginnen
+  - Erstellen und Verwalten von Entitäten in Common Data Service
+  - Felder innerhalb einer Entität in Common Data Service erstellen und verwalten
+  - Arbeiten mit Optionssätzen im Common Data Service
+  - Erstellen einer Beziehung zwischen Entitäten in Common Data Service
+  - Geschäftsregeln in Common Data Service definieren und erstellen
+  - Berechnungs- oder Rollup-Felder in Common Data Service erstellen und definieren
+  - Mit Sicherheitsrollen in Common Data Service beginnen
 
-
-  ### Modul 2&#58; Erste Schritte mit dem allgemeinen Daten-Service
-  In diesem Modul werden die Konzepte und Vorteile des allgemeinen Daten-Service erläutert. Das Erstellen einer Umgebung, von Entitäten, Feldern und Optionssätzen wird ebenfalls erläutert.
-
-
-  ### Modul 3&#58; Erstellen Sie eine Canvas-App in Power Apps
+  ### Modul 2&#58; Erstellen einer Canvas-App in Power Apps
   Dieses Modul führt Sie in Power Apps ein, hilft Ihnen beim Erstellen und Anpassen einer App sowie beim Verwalten und Verteilen. Außerdem erfahren Sie, wie man die beste App-Navigation bereitstellen und die beste Benutzeroberfläche mit Hilfe von Themen, Symbolen, Bildern, Personalisierung, verschiedenen Formfaktoren und Steuerelementen erstellen kann.
+  #### Lektionen
+  - Mit Power Apps beginnen
+  - Eine Canvas-App in Power Apps anpassen
+  - Verwalten von Apps in Power Apps
+  - Navigation in einer Canvas-App in Power Apps
+  - So erstellt man die Benutzeroberfläche in einer Canvas-App in Power Apps
+  - Verwenden und Verstehen von Steuerelementen in einer Canvas-App in Power Apps
+  - Dokumentieren und Testen Ihrer Power Apps-Anwendung
+
+
+  ### Modul 3&#58; Beherrschen fortgeschrittener Techniken und Datenoptionen in Canvas-Apps
+  Mit diesem Modul können Sie erweiterte Formeln verwenden, benutzerdefinierte Updates, Leistungsprüfungen und Tests durchführen.Es wird Ihnen auch helfen, die Benutzererfahrung zu verbessern, benutzerdefinierte Konnektoren zu verwenden und sich auf die Arbeit mit Datenquellenbeschränkungen zu konzentrieren.
+  #### Lektionen
+  - Wichtige Entwicklungstechniken für Canvas-Apps in Power-Apps verwenden
+  - Eine erweiterte Formel erstellen, die Tabellen, Datensätze und Sammlungen in einer Canvas-App in Power Apps verwendet
+  - Benutzerdefinierte Updates in einer Power Apps-Canvas-App durchführen
+  - Tests und Leistungsprüfungen in einer Power Apps-Canvas-App durchführen
+  - Arbeiten mit relationalen Daten in einer Power Apps-Canvas-App
+  - Arbeiten mit Datenquellenbeschränkungen (Delegierungsbeschränkungen) in einer Power Apps-Canvas-App
+  - Herstellen einer Verbindung zu anderen Daten in einer Power Apps-Canvas-App
+  - Verwenden benutzerdefinierter Konnektoren in einer Power Apps-Canvas-App
 
 
   ### Modul 4&#58; Automatisieren Sie einen Geschäftsprozess mit Power Automate
   Dieses Modul führt Sie in Power Automate ein, zeigt Ihnen, wie man Workflows erstellt und Abläufe verwaltet.
+  #### Lektionen
+  - Beginnen mit Power Automate
+  - Komplexere Abläufe mit Power Automate erstellen
+  - Einführung in Geschäftsprozessabläufe in Power Automate
+  - Erstellen eines umfassenden Geschäftsprozessflusses in Power Automate
+  - Verstehen fortgeschrittener Geschäftsprozessflusskonzepte in Power Automate
+  - Einführung in Ausdrücke in Power Automate
+
+  ### Modul 5&#58; Einführung in die Entwicklung mit Power Platform
+  Dieses Modul ist der erste Schritt zum Erlernen der Plattform, der Tools und des Ökosystems der Power Platform
+  #### Lektionen
+  - Einführung in Entwicklerressourcen für die Power-Plattform
+  - Verwenden von Entwicklertools zur Erweiterung der Power-Plattform
+  - Einführung in die Erweiterung der Power-Plattform
 
 
-  ### Modul 5&#58; Erstellen Sie einen Geschäftsprozessfluss in Power Automate
-  Dieses Modul führt Sie in die Erstellung von Geschäftsprozessabläufen in Power Automate ein.
-
-
-  ### Modul 6&#58; Einführung in die Entwicklung mit Power Platform
-  Dieses Modul ist der erste Schritt zum Erlernen der Plattform, der Tools und des Ökosystems der Power Plattform
+  ### Modul 6&#58; Erweitern des allgemeinen Datenservices der Power Platform
+  Dieses Modul befasst sich mit den Tools und Ressourcen, die zum Erweitern der Power Platform erforderlich sind.Wir beginnen mit einem Blick auf die SDKs, das Erweiterungsmodell und das Ereignis-Framework.Dieser Lernpfad behandelt auch die Verwendung von Plug-Ins.Konfiguration von Plug-Ins sowie Registrieren und Bereitstellen von Plug-Ins.
+  #### Lektionen 
+  - Einführung in den allgemeinen Datenservice für Entwickler
+  - Plug-Ins erweitern
 
 
   ### Modul 7&#58; Erweiterung der Power Plattform-Benutzererfahrung Modellgesteuerte Apps
   In diesem Modul wird beschrieben, wie man Client-Skripte erstellt, allgemeine Aktionen mit Client-Skripten ausführt und den Geschäftsprozessfluss mit Client-Skripten automatisiert. Erlernen Sie die Regeln und die Verwaltung von Skripten und was man mit Client-Skripten machen kann. Erfahren Sie, wann man Client-Skript verwendet und wann nicht.
+  #### Lektionen
+  - Einführung in Webressourcen
+  - Gemeinsame Aktionen mit Client-Skript ausführen
+  - Geschäftsprozessabläufe mit Client-Skript automatisieren
 
 
   ### Modul 8&#58; Erstellen Sie Komponenten mit dem Power Apps Component Framework
   Dieses Modul beschreibt den Einstieg in Power Apps Component Framework, mit einem Einführungsmodul zu den Kernkonzepten und -komponenten. Anschließend erfahren Sie, wie Sie eine Komponente erstellen und mit erweiterten Funktionen des Power Apps Component Frameworks arbeiten.
+  #### Lektionen
+  - Mit dem Power Apps-Komponentenframework beginnen
+  - Erstellen einer Power Apps-Komponente
+  - Verwenden erweiterter Funktionen mit dem Power Apps-Komponentenframework
 
 
-  ### Modul 9&#58; Erweitern des allgemeinen Daten-Services der Power Plattform
-  Dieses Modul befasst sich mit den Tools und Ressourcen, die zum Erweitern der Power Plattform erforderlich sind. Wir beginnen mit einem Blick auf die SDKs, das Erweiterungsmodell und das Ereignis-Framework. Dieser Lernpfad behandelt auch die Verwendung von Plug-Ins. Konfiguration von Plug-Ins sowie Registrieren und Bereitstellen von Plug-Ins.
+  ### Modul 9&#58; Erweitern der Power Apps-Portale
+  In diesem Modul wird beschrieben, wie Sie ein Inhaltsportal in eine vollständige Web-App verwandeln, die mit Common Data Service interagiert.Wir werden auch die Optionen behandeln, die Customizern und Entwicklern zur Verfügung stehen, um die Portalfunktionalität zu erweitern und in Office 365-, Power Platform- und Azure-Komponenten zu integrieren.
+  #### Lektionen 
+  - Einführung in Power Apps-Portale
+  - Zugriff auf Common Data Service in Power Apps-Portalen
+  - Erweitern von Power Apps-Portalen
+  - Erstellen benutzerdefinierter Webvorlagen für Power Apps-Portale
 
 
   ### Modul 10&#58; Integration mit Power Plattform und allgemeinem Daten-Service
   In diesem Modul wird beschrieben, wie Sie mit Hilfe von Code den allgemeinen Daten-Service integrieren, indem Sie sich mit der API zum allgemeinen Daten-Service vertraut machen. Verschaffen Sie sich einen detaillierten Überblick über die mit dem allgemeinen Daten-Service verfügbaren Optionen zum Integrieren von Daten und Ereignissen in Azure.
-
-
-  ### Modul 11&#58; Erweitern Sie Power Apps-Portale
-  In diesem Modul wird beschrieben, wie man ein Inhaltsportal in eine vollständige Web-App verwandelt, die mit dem allgemeinen Daten-Service interagiert. Wir werden auch die Optionen behandeln, die Anpassern und Entwicklern zur Verfügung stehen, um die Portalfunktionalität zu erweitern und in Office 365-, Power Platform- und Azure-Komponenten zu integrieren.
+  #### Lektionen
+  - Arbeiten mit der Common Data Service Web API
+  - Common Data Service Azure-Lösungen implementieren
