--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
@@ -8,7 +8,20 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
-  Solution Architects für Finanz- und Betriebsanwendungen in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die die von Unternehmen empfohlenen Vorgehensweisen und Softwarefunktionen verstehen. Sie führen die Teammitglieder zur Implementierung von Dynamics-Lösungen, mit denen die vordefinierten Implementierungsziele erreicht werden können.
+  Sind Sie ein Lösungsarchitekt, funktionaler oder technischer Berater, IT-Experte oder Information Worker, der mit Microsoft Dynamics 365-Apps und Microsoft Power Platform vertraut ist?Haben Sie ein tiefes Verständnis von Dynamics 365-Apps für Finanzen und Betrieb? Sind Sie ein vertrauenswürdiger Berater, der die empfohlenen Geschäftspraktiken und Softwarefunktionen versteht?Wenn ja, kann die Erlangung dieser Expertenzertifizierung Türen öffnen, die Ihre Karriere auf den nächsten Level bringen könnten.
+  
+  Als Kandidat für diese Zertifizierung sind Sie ein Dynamics 365-Experte, der Stakeholder berät und Geschäftsanforderungen in sichere, skalierbare und zuverlässige Lösungen umsetzt. Sie entwerfen zusammenhängende Lösungen für Ihre Kunden, weil Sie wissen, wie Sie mit den wesentlichen Architekturkomponenten von Dynamics 365-Apps für Finanzen und Betrieb arbeiten. Sie verfügen über umfassende Domainkenntnisse in einer oder mehreren Branchen. Außerdem wissen Sie, wie sich Entscheidungen in jedem Bereich auf die Gesamtlösung auswirken. Darüber hinaus sind Sie mit Plattformen, Tools und Funktionsbereichen wie Finanzen, Lieferkettenmanagement und Fertigung vertraut.
+  
+  Dynamics 365&#58; Die Finance and Operations Apps Solution Architect Expertenzertifizierung passt gut zu Ihnen, wenn&#58;
+  - Sie über umfangreiche Erfahrung als Funktionsberater oder technischer Berater für Dynamics 365-Finanz- und Betriebsanwendungen verfügen; 
+  - Sie Lösungsarchitekt werden möchten oder diese Karriere vor kurzem begonnen haben; 
+  - Sie für das erfolgreiche Design, die Implementierung, Bereitstellung und Übernahme einer Technologielösung in Ihrem Unternehmen verantwortlich sind;
+  - Sie Erfahrung in der Beratung von Organisationen und Mitgliedern des Implementierungsteams haben, um Geschäftsanforderungen zu klar definierten und kostengünstigen Lösungen weiterzuentwickeln;
+  
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge&#58;
+  - Begleiten Sie einen Lösungsarchitekten oder arbeiten Sie als solcher an einigen Projekten. 
+  - Melden Sie sich freiwillig für Entwurf und Implementierung einer App-Lösung für Finanzen und Betrieb. 
+  - Nehmen Sie mit anderen Lösungsarchitekten an Workshops zur Lösungsarchitektur teil.
 subTitle: Solution Architects für Finanz- und Betriebsanwendungen in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die die von Unternehmen empfohlenen Vorgehensweisen und Softwarefunktionen verstehen. Sie führen die Teammitglieder zur Implementierung von Dynamics-Lösungen, mit denen die vordefinierten Implementierungsziele erreicht werden können.
 levels:
 - advanced
