--- a/learn-certs-pr/d365-fundamentals.yml
+++ b/learn-certs-pr/d365-fundamentals.yml
@@ -6,11 +6,12 @@ metadata:
 uid: certification.d365-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
-  <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong>DIESE ZERTIFIZIERUNG WIRD AM 30. JUNI 2021 EINGESTELLT.Nach diesem Datum können Sie diese Zertifizierung nicht mehr erwerben.Alle Zertifizierungen, die Sie vor deren Einstellung erhalten haben, werden weiterhin auf Ihrem Transkript im <a href="https://aka.ms/certdashboard">Zertifizierungs-Dashboard angezeigt</a>.</strong><br/><br/></div>
 
   Zeigen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz; gemischte Realität; die Power-Plattform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung. 
 
-  <div><br/><strong>Hinweis&#58; Microsoft aktualisiert derzeit keine Verweise zum „Common Data Service" auf „Microsoft Dataverse".</strong></div> 
+  <div><br/><strong>Da diese Zertifizierung am 30. Juni 2021 eingestellt wird, wird Microsoft Verweise zum „allgemeinen Datenservice" auf „Microsoft Dataverse" nicht aktualisieren.</strong></div>
 subTitle: 'Zeigen Sie, dass Sie Microsoft Dynamics 365 verstehen. Künstliche Intelligenz (KI); gemischte Realität (MR); die Power Platform; Cloud-Konzepte; Cloud-Sicherheit; Dynamics 365-Sicherheit; Gemeinsamer Daten-Service; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.'
 levels:
 - beginner
