--- a/learn-certs-pr/exams/77-881.yml
+++ b/learn-certs-pr/exams/77-881.yml
@@ -6,13 +6,15 @@ metadata:
 uid: exam.77-881
 displayName: 77-881
 summary: |-
+  <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong>Diese Prüfung ist eingestellt worden.Informationen zu derzeit verfügbaren Optionen finden Sie auf der <a href="/learn/certifications/browse/">Seite „Zertifizierungen und Prüfungen durchsuchen"</a>.</strong><br/><br/></div>
+  </div>
 
   Der Benutzer auf Basis von Microsoft Office Word 2010 sollte in der Lage sein, die Microsoft Office Word 2010-Software auf der Funktions- und Funktionsebene zu bedienen. Sie sollten mit mindestens 80 Prozent der Funktionen und Fähigkeiten von Microsoft Office Word 2010 vertraut sein und wissen, wie man diese nutzt. Der Basis-Benutzer sollte in der Lage sein, Microsoft Office Word 2010 zu verwenden, um professionell aussehende Dokumente für eine Vielzahl von Zwecken und Situationen zu erstellen und zu bearbeiten. Zu den Nutzern gehören Menschen aus den unterschiedlichsten Berufsgruppen aus fast allen Bereichen des Berufs-, Studenten- und Privatlebens.
 subTitle: Der Benutzer auf Basis von Microsoft Office Word 2010 sollte in der Lage sein, die Microsoft Office Word 2010-Software auf der Funktions- und Funktionsebene zu bedienen. Sie sollten mit mindestens 80 Prozent der Funktionen und Fähigkeiten von Microsoft Office Word 2010 vertraut sein und wissen, wie man diese nutzt. Der Basis-Benutzer sollte in der Lage sein, Microsoft Office Word 2010 zu verwenden, um professionell aussehende Dokumente für eine Vielzahl von Zwecken und Situationen zu erstellen und zu bearbeiten. Zu den Nutzern gehören Menschen aus den unterschiedlichsten Berufsgruppen aus fast allen Bereichen des Berufs-, Studenten- und Privatlebens.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trjX
-scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - ar-sa
@@ -37,6 +39,7 @@ skills:
 - Korrekturlesen von Dokumenten
 - Anwenden von Referenzen und Hyperlinks
 - Durchführen von Seriendruckvorgängen
+retirementDate: none
 roles:
 - business-user
 products:
