--- a/learn-certs-pr/exams/mb-901.yml
+++ b/learn-certs-pr/exams/mb-901.yml
@@ -8,6 +8,7 @@ displayName: MB-901
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong>DIESE PRÜFUNG WIRD AM 30. JUNI 2021 EINGESTELLT.Zwei Ersatzprüfungen, MB-910 und MB-920, sind verfügbar.Weitere Informationen finden Sie auf den Detailseiten zu den Prüfungen <a href="/learn/certifications/exams/mb-910">MB-910</a> und <a href="/learn/certifications/exams/mb-920">MB-920</a>.Hinweis&#58; Die Prüfungen werden um 23:59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div>
   <div><strong> Der Inhalt dieser Prüfung wurde am 10. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
   </div>
 
@@ -19,7 +20,7 @@ summary: |-
 
   Wenn Sie diese Zertifizierungsprüfung bestehen, haben Sie möglicherweise Anspruch auf Anrechnung beim ACE-College.Weitere Informationen finden Sie unter [ACE college credit for certification exams](/learn/certifications/ace-credit-for-certification-exams). 
 
-  <div><br/><strong>Hinweis: Microsoft aktualisiert derzeit keine Verweise zum „Common Data Service" auf „Microsoft Dataverse".</strong></div> 
+  <div><br/><strong>Da diese Prüfung am 30. Juni 2021 eingestellt wird, wird Microsoft Verweise zum „allgemeinen Datenservice" auf „Microsoft Dataverse" nicht aktualisieren.</strong></div>
 subTitle: Dieses Examen misst Ihre Fähigkeit, Microsoft Dynamics 365 zu verstehen. künstliche Intelligenz; gemischte Realität; die Energieplattform; Cloud-Konzepte; Cloud-Sicherheit; rollenbasierte Sicherheit in Dynamics 365; Gemeinsamer Datendienst; Datenverwaltungsrahmen; Dynamics 365-Berichterstellung; Dynamics 365-Integrationen; und Cloud-Bereitstellung.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4n1DO
@@ -44,6 +45,7 @@ skills:
 - Beschreiben künstlicher Intelligenz und gemischter Realität in Dynamics 365 (10-15%)
 - Beschreiben modellbasierter Apps (25-30%)
 - Beschreiben von Finanz- und Betriebsanwendungen (25-30%)
+retirementDate: 06/30/2021
 roles:
 - business-owner
 - business-user
