--- a/learn-certs-pr/exams/pl-200.yml
+++ b/learn-certs-pr/exams/pl-200.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: 'Microsoft Power Platform Functional Consultant (beta)'
+title: 'Microsoft Power Platform Functional Consultant'
 metadata:
-  title: 'Exam PL-200: Microsoft Power Platform Functional Consultant (beta)'
-  description: 'Exam PL-200: Microsoft Power Platform Functional Consultant (beta)'
+  title: 'Exam PL-200: Microsoft Power Platform Functional Consultant'
+  description: 'Exam PL-200: Microsoft Power Platform Functional Consultant'
 uid: exam.pl-200
 displayName: PL-200
 summary: |-
@@ -15,8 +15,6 @@ summary: |-
   Die Kandidaten arbeiten aktiv mit Mitgliedern des Qualitätssicherungsteams zusammen, um sicherzustellen, dass die Lösungen den funktionalen und nicht funktionalen Anforderungen entsprechen. Sie identifizieren, generieren und liefern Artefakte für die Verpackung und Bereitstellung an DevOps-Ingenieure und bieten Power Platform-Administratoren Betriebs- und Wartungstrainings an.
   
   Funktionsberater von Power Platform sollten mit modellgetriebenen Dynamics 365-Anwendungen vertraut sein und Erfahrung mit der Verwendung der Power Platform-Komponenten zum Erweitern und Anpassen modellgesteuerter Dynamics 365-Anwendungen haben. 
-  
-  <div><strong><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Um mehr zu erfahren <a href="/learn/certifications/certification-exams#participating-in-beta-exams">about the value and importance of beta exams</a>.</strong></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden Aufgaben auszuführen: Konfigurieren des Common Data Services; Apps mit Hilfe von Power Apps erstellen. Erstellen und Verwalten von Power Automate; Power Virtual Agents Chatbots erstellen sowie Power Apps in andere Apps und Services integrieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CQVs
