--- a/learn-certs-pr/index.yml
+++ b/learn-certs-pr/index.yml
@@ -107,21 +107,26 @@ resourcesSection:
       url: /learn/certifications/browse
 
 statisticsSection:
-  title: Warum eine Zertifizierung?
-  summary: Zertifizierungen geben Ihnen durch den Nachweis branchenweit anerkannter, aufgabenbasierter Kompetenzen einen beruflichen Vorteil.
+  title: Microsoft-Zertifizierungen
+  summary: Microsoft-Zertifizierungen bieten einen professionellen Vorteil, indem sie weltweit anerkannte und von der Industrie anerkannte Nachweise für die Beherrschung von Fähigkeiten in einem Digital- und Cloud-Unternehmen liefern.
   video:
-    pdfDownloadUrl: https://download.microsoft.com/download/C/A/A/CAA1BDA9-D61F-47D2-BC0A-C3A820B21DAF/Pearson_VUE_Value_of_IT_Certification_Survey_Summary_Report_2017.pdf
+    pdfDownloadUrl: https://home.pearsonvue.com/voc
     iframeTitle: Microsoft-Zertifizierungen
     iframeSrc: https://www.microsoft.com/videoplayer/embed/RE3HGnx?pid=RE3HGnx-ax-0-id-oneplayer&jsapi=true&postJsllMsg=true&autoplay=false&mute=false&loop=false&market=en-us&playFullScreen=false
-    title: Vorteile von Microsoft-Zertifizierungen
-    summary: Nach Erhalt einer Zertifizierung berichteten 23% ammer von Microsoft zertifizierten Techniker eine Steigerung von bis zu 20% des Gehalts. Zudem werden zertifizierte angestellte oft damit beauftragt, Ihre Kollegen zu überwachen - eine ideale Position für eine schnelle Beförderung. —2017 Pearson VUE-Leitfaden zum Wert der Zertifizierung.
+    title: Vorteile von Zertifizierungen
+    summary: Nach Erhalt einer Zertifizierung gaben 67% der Techniker an, dass sie ein größeres Selbstvertrauen in die Leistungsfähigkeit ihrer Arbeit hatten, 41% gaben eine höhere Arbeitszufriedenheit an und 35% verzeichneten eine Gehalts- oder Lohnerhöhung. —2018 Pearson VUE Wert der IT-Zertifizierung.
   items:
-    - title: 38%
-      summary: aller IT-Positionen wird ab 2021 cloudbezogen sein.
-      note: IDC/Microsoft, Cloud-Skills und deren Einfluss auf Organisationen* Wie Cloud Skills die Karriere von IT-Profis beschleunigen, Mai 2017
-    - title: 35%
-      summary: der IT-Experten glauben dass sie bei Cloud-Implementierungen mehr Einfluss haben, als ihre Kollegen bei der Bereitstellung anderer Technologien.
-      note: IDC/Microsoft, Cloud-Skills und deren Einfluss auf Organisationen* Wie Cloud Skills die Karriere von IT-Profis beschleunigen, Mai 2017
-    - title: 36,9%
-      summary: der IT-Profis gaben an, Zertifizierungen erleichterten ihnen komplexe Aufgaben souveräner zu erledigen.
-      note: Pearson VUE, The Value of IT Certification Survey, Januar 2017
+    - title: 91%
+      summary: der zertifizierten IT-Fachleute geben an, dass Zertifizierungen ihnen mehr professionelle Glaubwürdigkeit geben.
+      note: 2018 Pearson VUE Wert der Zertifizierung
+    - title: 52%
+      summary: der zertifizierten IT-Fachleute geben an, dass ihr Fachwissen in ihrem Unternehmen gefragter ist.
+      note: Global Knowledge 2019 IT-Kenntnisse und Gehaltsbericht
+    - title: 93%
+      summary: der Entscheidungsträger sind sich einig, dass zertifizierte Mitarbeiter einen Mehrwert bieten.
+      note: Global Knowledge 2019 IT -Entscheidungsträger Sichtweisen
+      
+
+
+
+
