--- a/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
+++ b/learn-certs-pr/power-apps-and-d365-solution-architect-expert.yml
@@ -10,7 +10,7 @@ summary: |-
   
   Lösungsarchitekten für Microsoft Dynamics 365 + Power Platform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen. 
 
-  <div>HINWEIS&#58; Das Erwerben der folgenden zwei Zertifizierungen ist eine Voraussetzung für diese Zertifizierung. Auf Grund von Beschränkungen der Seite werden diese Voraussetzungen nicht aufgeführt.<ul>
+  <div><br/><strong>HINWEIS&#58; Das Erwerben der folgenden zwei Zertifizierungen ist eine Voraussetzung für diese Zertifizierung. Auf Grund von Beschränkungen der Seite werden diese Voraussetzungen nicht aufgeführt.</strong><ul>
   <li><a href="/learn/certifications/power-platform-functional-consultant-associate">Microsoft Certified: Power Platform Functional Consultant Associate</a></li>
   <li><a href="/learn/certifications/power-platform-developer-associate">Microsoft Certified: Power Platform Developer Associate</a></li>
   </ul></div>
