--- a/learn-certs-pr/power-platform-functional-consultant-associate.yml
+++ b/learn-certs-pr/power-platform-functional-consultant-associate.yml
@@ -2,14 +2,23 @@
 title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
-  description: Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
+  description: Als funktionaler Berater nutzen Sie diese Zertifizierung, um sich für Projekte und andere Aufträge effektiver zu vermarkten. Mit der Microsoft Power Platform-Zertifizierung als Functional Consultant Associate wissen Unternehmen, dass Sie – ohne Code oder mit geringem Code – Lösungen erstellen können, für die normalerweise das Know-how eines Entwicklers erforderlich ist.
 uid: certification.power-platform-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong><br/><br/></font></div>
 
-  Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen. Sie sollten Erfahrung mit Power-Platform-Maker-Tools haben, um Lösungen zu erstellen, die Power-Platform und Microsoft 365 verwenden. Zertifizierte Funktionsberater sollten über Kenntnisse in Datenmodellierung, User Experience Design, Anforderungsanalyse und Prozessanalyse verfügen.
-subTitle: Der Funktionsberater von Power-Platform muss über umfassende Kenntnisse der Power-Platform verfügen, einschließlich des praktischen Verständnisses der Fähigkeiten, Grenzen und Einschränkungen.
+  Sind Sie ein funktionaler Berater, Datenanalyst oder Entwickler, der seine Beratungs- und Konfigurationsfähigkeiten verbessern möchte, oder ein Lösungsarchitekt auf dem Weg zur Zertifizierung als Lösungsarchitekt?Vielleicht sind Sie auch ein IT-Experte mit Kenntnissen und Erfahrungen bei der Konfiguration von Microsoft Power Platform.Wenn dies auf Sie zutrifft und Sie mit modellgetriebenen Microsoft Dynamics 365-Anwendungen und Datenmodellierungsprinzipien vertraut sind, untersuchen Sie, wie die Zertifizierung als Microsoft Power Platform Functional Consultant Associate Ihre Karriere fördern und Sie zu einem wichtigen Mitglied Ihres Teams machen kann.Diese Zertifizierung steht weltweit dafür, dass Sie für die Erstellung und Implementierung von Lösungen mit Power Apps, Power BI und Power Virtual Agents qualifiziert sind.
+  
+  Als Kandidat für diese Zertifizierung arbeiten Sie mit Interessenvertretern und Fachleuten eines Unternehmens wie Lösungsarchitekten, Entwicklern und Testern zusammen, um Anforderungen zu erfassen und anschließend Microsoft Power Platform-Lösungen zu implementieren.Sie erstellen modellgetriebene, Canvas- und Portal-Apps.Außerdem erstellen Sie Power Automate-Flows, entwerfen Chatbots mit Hilfe von Power Virtual Agents und analysieren Daten mit Hilfe von Power BI-Visualisierung und Dashboards.Sie erstellen Anwendungsverbesserungen, benutzerdefinierte Anwendererlebnisse, Systemintegrationen, Datenkonvertierungen, benutzerdefinierte Prozessautomatisierung sowie benutzerdefinierte Visualisierungen.
+  
+  Als funktionaler Berater nutzen Sie diese Zertifizierung, um sich für Projekte und andere Aufträge effektiver zu vermarkten. Mit der Microsoft Power Platform-Zertifizierung als Functional Consultant Associate wissen Unternehmen, dass Sie – ohne Code oder mit geringem Code – Lösungen erstellen können, für die normalerweise das Know-how eines Entwicklers erforderlich ist.
+
+  Wenn Sie mehr Erfahrung benötigen, bevor Sie versuchen, diese Zertifizierung zu erhalten, finden Sie hier einige Vorschläge:
+  - Erstellen Sie ein einfaches Dashboard mit Power BI.
+  - Nutzen Sie verfügbare Lernpfade in Microsoft Learn.
+  - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
+subTitle: Als funktionaler Berater nutzen Sie diese Zertifizierung, um sich für Projekte und andere Aufträge effektiver zu vermarkten. Mit der Microsoft Power Platform-Zertifizierung als Functional Consultant Associate wissen Unternehmen, dass Sie – ohne Code oder mit geringem Code – Lösungen erstellen können, für die normalerweise das Know-how eines Entwicklers erforderlich ist.
 levels:
 - intermediate
 skills:
@@ -32,6 +41,8 @@ products:
 - power-platform
 - office-teams
 - power-virtual-agents
+courses:
+- uid: course.pl-200t00
 paths:
 - uid: learn-dynamics.get-started-using-common-data-service
 - uid: learn-dynamics.manage-permissions-and-administration-for-common-data-service
