--- a/learn-certs-pr/power-platform-fundamentals.yml
+++ b/learn-certs-pr/power-platform-fundamentals.yml
@@ -8,7 +8,19 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
 
-  Beweisen Sie, dass Sie die Kernfunktionen der Power-Plattform verstehen - vom Geschäftswert über die Kernfunktionen des Produkts bis hin zum Erstellen einer einfachen Power Apps-Canvas-App, dem Verbinden von Datenquellen, dem Automatisieren grundlegender Geschäftsprozesse mit Power Automate, dem Erstellen eines Power BI-Dashboards und dem Erstellen leistungsstarker Chatbots mit Power Virtual Agents.
+  Wenn Sie Student, Geschäftsanwender oder technischer Anfänger sind, kann diese Zertifizierung Ihren Fortschritt beschleunigen und Ihre Karriere ankurbeln, da Sie Ihre Microsoft Power Platform-Kenntnisse nutzen können, um die Produktivität Ihres Teams zu verbessern.Es sind keine Vorkenntnisse für diese Schulung erforderlich - lediglich grundlegende Kenntnisse in Computertechnologie, Datenanalyse, Cloud Computing und Internet.Stellen Sie sich eine grundlegende Zertifizierung als ersten Schritt vor, Ihre Fähigkeiten zu erweitern und zu anderen Zertifizierungen überzugehen, z. B. zum Microsoft Power Platform Functional Consultant.
+  
+  Die Microsoft Power Platform Fundamentals-Zertifizierung könnte gut für Sie passen, wenn Sie Folgendes tun möchten:
+  - Lösungen mit Microsoft Power Platform erstellen.
+  - grundlegende Geschäftsprozesse mit Power Automate automatisieren.
+  - eine Datenanalyse mit Power BI durchführen. 
+  - einfache Power Apps-Erlebnisse erstellen.
+  - praktische Chatbots mit Power Virtual Agents erstellen.
+  
+  Für diese Zertifizierung gibt es keine Voraussetzungen.Wenn Sie jedoch mehr Erfahrung sammeln möchten, können Sie:
+  - einer Person in Ihrem Team, die mit Microsoft Power Platform arbeitet, über die Schulter schauen.
+  - verfügbare Lernpfade in Microsoft Learn nutzen.
+  - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
 subTitle: Beweisen Sie, dass Sie die Kernfunktionen der Power-Plattform verstehen - vom Geschäftswert über die Kernfunktionen des Produkts bis hin zum Erstellen einer einfachen Power Apps-Canvas-App, dem Verbinden von Datenquellen, dem Automatisieren grundlegender Geschäftsprozesse mit Power Automate, dem Erstellen eines Power BI-Dashboards und dem Erstellen leistungsstarker Chatbots mit Power Virtual Agents.
 levels:
 - beginner
