--- a/learn-certs-pr/d365-functional-consultant-marketing.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing.yml
@@ -8,19 +8,18 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>MB-200 WIRD IM SEPTEMBER 2020 DURCH EINE NEUE PRÜFUNG, <a href="/learn/certifications/exams/pl-200">PL-200</a>, ERSETZT. Sie können diese Zertifizierung erwerben, indem Sie MB-200 oder PL-200 plus MB-220 bestehen, bevor MB-200 am 31. Dezember 2020 eingestellt wird. Nach der Einstellung von MB-200 müssen Sie PL-200 und MB-220 bestehen, um diese Zertifizierung zu erhalten.</strong><br/><br/></div></div>
+  <div><strong>PRÜFUNG <a href="/learn/certifications/exams/mb-200">MB-200</a> WIRD DURCH EINE NEUE PRÜFUNG <a href="/learn/certifications/exams/pl-200">PL-200 </a>ERSETZT.Sie können diese Zertifizierung erwerben, indem Sie MB-200 oder PL-200 plus MB-220 bestehen, bevor MB-200 am 31. Dezember 2020 eingestellt wird.Nach der Einstellung von MB-200 müssen Sie PL-200 und MB-220 bestehen, um diese Zertifizierung zu erhalten.Hinweis:Die Prüfungen werden um 23:59 Uhr Zentrale Standardzeit (USA) eingestellt.</strong><br/><br/></div></div>
 
   Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
 subTitle: Microsoft Dynamics 365 Marketing Functional Consultants richten Lösungen ein, die Leads gewinnen und konvertieren, Markenbekanntheit aufbauen, Omni-Channel-Messaging standardisieren und Marketinginformationen liefern.
 levels:
 - intermediate
 skills:
-- Erkennen von Anforderungen, Analyse und Planung
-- Erstellen und Verwalten des Benutzererlebnisdesigns
-- Verwalten von Entitäten und Daten
-- Sicherheit implementieren
-- Integration implementieren
-- Durchführung von Lösungsimplementierungen und Tests
+- Konfigurieren Sie den allgemeinen Datenservice 
+- Erstellen Sie Apps mit Hilfe von Power Apps 
+- Erstellen und Verwalten Sie Power Automate 
+- Implementieren Sie Power Virtual Agents Chatbots 
+- Integrieren Sie Power Apps in andere Apps und Services
 - Konfigurieren von Marketinganwendungen
 - Segmente und Listen verwalten
 - Marketingformulare und Seiten erstellen und verwalten
@@ -36,23 +35,29 @@ products:
 - dynamics-365
 - dynamics-marketing
 courses:
-- uid: course.mb-200t00
+- uid: course.pl-200t00
 - uid: course.mb-220t00
 paths:
+- uid: learn-dynamics.get-started-using-common-data-service
+- uid: learn-dynamics.manage-permissions-and-administration-for-common-data-service
 - uid: learn-bizapps.create-powerapps
 - uid: learn-bizapps.create-app-models-business-processes
-- uid: learn-dynamics.implementing-customer-engagement-online
+- uid: learn-bizapps.create-business-process-flow
 - uid: learn-bizapps.automate-process-using-flow
+- uid: learn-bizapps.get-started-power-automate-buttons
+- uid: learn-bizapps.best-practices-environments
 - uid: learn-bizapps.create-use-analytics-reports-power-bi
-- uid: learn-bizapps.get-started-power-apps-portals
-- uid: learn-bizapps.extend-power-apps-portals
+- uid: learn-dynamics.create-relationships-business-rules-calculations-and-rollups-in-common-data-service
+- uid: learn-bizapps.work-power-virtual-agents
+- uid: learn-bizapps.bring-ai
+- uid: learn-bizapps.improve-business-performance-ai-builder
 - uid: learn-dynamics.set-up-dynamics-365-marketing
 - uid: learn-dynamics.work-core-features-marketing
 - uid: learn-dynamics.manage-events-dynamics-marketing
 - uid: learn-dynamics.analyze-marketing-insights
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUj1
 exams:
-- uid: exam.mb-200
+- uid: exam.pl-200
 - uid: exam.mb-220
 resources:
 - title: Zertifizierungsposter
