--- a/learn-certs-pr/exams/77-883.yml
+++ b/learn-certs-pr/exams/77-883.yml
@@ -6,7 +6,10 @@ metadata:
 uid: exam.77-883
 displayName: 77-883
 summary: |-
+  <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
+  <div><strong>Diese Prüfung ist eingestellt worden.Informationen zu derzeit verfügbaren Optionen finden Sie auf der <a href="/learn/certifications/browse/">Seite „Zertifizierungen und Prüfungen durchsuchen"</a>.</strong><br/><br/></div>
+  </div>
 
   Der typische Kandidat für die Prüfung ist ein Student, Büroangestellter oder Ausbilder, der PowerPoint 2010 auf der Funktions- und Funktionsebene navigieren muss.
 
@@ -14,7 +17,6 @@ summary: |-
 subTitle: Der typische Kandidat für die Prüfung ist ein Student, Büroangestellter oder Ausbilder, der PowerPoint 2010 auf der Funktions- und Funktionsebene navigieren muss.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tkyU
-scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - ar-sa
@@ -39,6 +41,7 @@ skills:
 - An Präsentationen mitarbeiten
 - Präsentationen für die Lieferung vorbereiten
 - Präsentationen halten
+retirementDate: none
 roles:
 - business-user
 products:
