--- a/learn-certs-pr/exams/ai-900.yml
+++ b/learn-certs-pr/exams/ai-900.yml
@@ -8,7 +8,7 @@ displayName: AI-900
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wurde am 22. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 27. Januar 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
   Kandidaten für diese Prüfung sollten über grundlegende Kenntnisse der Konzepte maschinellen Lernens (ML) und künstlicher Intelligenz (AI) sowie der zugehörigen Microsoft Azure-Services verfügen.
@@ -40,7 +40,7 @@ locales:
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wurde am 22. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 27. Januar 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht zur Prüfungskompetenz herunter, um zu sehen, was sich ändern wird.
 - AI-Workloads und Überlegungen dazu beschreiben (15-20%)
 - Grundprinzipien des maschinellen Lernens in Azure beschreiben (30-35%)
 - Funktionen von Computer Vision-Workloads in Azure beschreiben (15-20%)
