--- a/learn-certs-pr/exams/az-220.yml
+++ b/learn-certs-pr/exams/az-220.yml
@@ -8,7 +8,7 @@ displayName: AZ-220
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wurde am 24. September 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 27. Januar 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
   Kandidaten für dieses examens sollten über Fachkenntnisse in der Entwicklung von Cloud- und Edge-Komponenten einer Azure IoT-Lösung verfügen.
@@ -31,7 +31,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am 24. September 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 27. Januar 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht zur Prüfungskompetenz herunter, um zu sehen, was sich ändern wird.
 - Implementierung der IoT-Lösungsinfrastruktur (15-20%)
 - Bereitstellung und Verwaltung von Geräten (20-25%)
 - Edge implementieren (15-20%)
