--- a/learn-certs-pr/exams/dp-900.yml
+++ b/learn-certs-pr/exams/dp-900.yml
@@ -8,7 +8,7 @@ displayName: DP-900
 summary: |-
   <div>
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Erfahren Sie mehr</a>.</strong></font><br/><br/></div>
-  <div><strong>Der Inhalt dieser Prüfung wurde am 22. Oktober 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich geändert hat.</strong><br/><br/></div>
+  <div><strong>Der Inhalt dieser Prüfung wird am 27. Januar 2021 aktualisiert.Bitte laden Sie das unten stehende Dokument zur Kompetenzmessung herunter, um zu sehen, was sich ändern wird.</strong><br/><br/></div>
   </div>
 
   Kandidaten für die Azure Data Fundamentals-Zertifizierung sollten über grundlegende Kenntnisse von Kerndatenkonzepten und deren Implementieren mit Hilfe von Microsoft Azure-Daten-Services verfügen.
@@ -40,7 +40,7 @@ locales:
 levels:
 - beginner
 skills:
-- Der Inhalt dieser Prüfung wurde am 22. Oktober 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wird am 27. Januar 2021 aktualisiert.Bitte laden Sie die unten stehende Übersicht zur Prüfungskompetenz herunter, um zu sehen, was sich ändern wird.
 - Beschreiben von Kerndatenkonzepten (15-20%)
 - Beschreiben, wie man mit relationalen Daten in Azure arbeitet (25-30%)
 - Beschreiben, wie man mit nicht-relationalen Daten in Azure arbeitet (25-30%)
